<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInWithEmailFragment"
    android:background="@color/emailLoginWhite">

    <LinearLayout android:id="@+id/sign_in_fragment"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="15dp" >

        <include
            layout="@layout/email_connect_common"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_email_sign_in_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/email_cancel"/>

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/email_sign_in"/>

        </LinearLayout>


        <TextView
            android:id="@+id/txt_email_sign_up_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/email_sign_up_link"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp" />

    </LinearLayout>
</ScrollView>
