...
        android:text="@string/app_title_short"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/oapp_secondary_text"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:hint="@string/username_placeholder_text"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/et_password"
        android:singleLine="true"
        android:textColorHint="@color/emailHintGrey"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
...
