<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/product_options_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:id="@+id/product_options_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/product_options_sheet_label"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/options_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:drawSelectorOnTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/quantity_counter_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <ImageView
            android:id="@+id/quantity_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:src="@drawable/ic_remove_circle_disabled_24dp" />

        <TextView
            android:id="@+id/quantity_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/quantity_counter_initial_count"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/quantity_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:src="@drawable/ic_add_circle_24dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_product_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/oapp_button"
        android:padding="10dp"
        android:text="@string/product_option_button_text"
        android:textAlignment="center"
        android:textColor="@color/oapp_primary_text"
        android:textStyle="bold" />

</LinearLayout>