...
        android:layout_gravity="start"
        android:gravity="start"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="Additional Information"
        android:textColor="@color/path_black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
...
        android:text="Product Option"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/add_option_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="end"
        android:layout_row="1"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_24dp"
...
