<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/purchase_information_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/product_options_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/rewards_edit_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/buy_sheet_order_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/buy_sheet_payment_type_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>